--- a/src/components/Week/styles.module.scss
+++ b/src/components/Week/styles.module.scss
@@ -1,7 +1,5 @@
 .week {
   display: flex;
-  border-style: solid;
-  border-width: 1px;
-  border-color: black;
-  margin-bottom: 10px;
+  justify-content: center;
+  margin: auto;
 }
