--- a/src/components/AccommodationInfo/styles.module.scss
+++ b/src/components/AccommodationInfo/styles.module.scss
@@ -1,10 +1,7 @@
 .accommodationInfoContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
   position: relative;
+  width: auto;
+  display: inline;
 }
 
 .accommodationInfo {
@@ -35,7 +32,7 @@
   border-radius: 50%;
   height: 50px;
   width: 50px;
-  margin-left: 16px;
   position: absolute;
-  left: 900px;
+  top: 50px;
+  right: -360px;
 }
